<resources>
    <string name="app_name">PokeViewer</string>
    <string name="search">Buscar</string>
    <string name="pokemonOrNumber">Pokemon o numero</string>
    <string name="error">Error, pokemon no existe</string>
    <string name="pokemonNotFound">Pokemon no encontrado</string>
    <string name="weakness">Debilidades</string>
    <string name="inmunities">Inmunidades</string>
    <string name="resistances">Resistencias</string>
    <string name="aboutme">Creado por SFKao</string>
    <string name="habilidades">Habilidades</string>
    <string name="oculta">Oculta</string>
    <string name="ps">PS</string>
    <string name="ataque">Ataque</string>
    <string name="defence">Defensa</string>
    <string name="spAtk">Esp. Atk</string>
    <string name="espDef">Esp. Def</string>
    <string name="velocidad">Velocidad</string>
    <string name="debilidades">Debilidades</string>
    <string name="stats">Stats</string>
    <string name="invitado">Invitado</string>
    <string name="conectado_como">Conectado como:</string>
    <string name="mostrar_menu_lateral">Mostrar menu lateral</string>
    <string name="buscador">Buscador</string>
    <string name="mis_equipos">Mis equipos</string>
    <string name="open">Abrir</string>
    <string name="close">Cerrar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nuevo_equipo">Nuevo equipo</string>
    <string name="nombre">Nombre:</string>
    <string name="nombreHint">Nombre</string>
    <string name="pokemonDoubleDot">Pokemon:</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="stringRequired">Se requiere el nombre</string>
    <string name="id">ID: </string>
    <string name="autor">Autor: </string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="has_olvidado_tu_contrase_a">¿Has olvidado tu contraseña?</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="seguir_sin_iniciar_sesi_n">Seguir sin iniciar sesión</string>
    <string name="se_requiere_nombre_de_usuario">Se requiere nombre de usuario</string>
    <string name="usuario_o_contra_incorrectos">Usuario o contraseña incorrectos</string>
    <string name="repetir_contrase_a">Repetir contraseña</string>
    <string name="usuario_obligatorio">El nombre de usuario es obligatorio</string>
    <string name="email_obligatorio">El email es obligatorio</string>
    <string name="pass_obligatorio">La contraseña es obligatoria</string>
    <string name="repeatPass_obligatorio">Se ha de repetir la contraseña</string>
    <string name="contrase_a_no_concuerdan">Las contraseñas no concuerdan</string>
    <string name="no_se_pudo_encriptar">No se pudo encriptar la contraseña, esto es un error de la aplicación</string>
    <string name="equipos_online">Equipos online</string>
    <string name="necesitas_estar_logueado">Necesitas estar logueado para ello</string>
    <string name="like">Like</string>
    <string name="favoritos">Favoritos</string>
    <string name="idHint">id</string>
    <string name="salir">Salir</string>
    <string name="equipo_no_encontrado">No se ha encontrado el equipo</string>
    <string name="se_ha_borrado_el_equipo">Se ha borrado el equipo</string>
    <string name="no_se_puede_borrar_un_equipo_subido">No se puede borrar un equipo subido</string>
    <string name="no_se_puede_editar_un_equipo_subido">No se puede editar un equipo subido</string>
    <string name="hubo_un_error">Hubo un error en el servidor, pruebe mas tarde</string>
    <string name="mis_amigos">Mis amigos</string>
    <string name="no_se_pudo_ejecutar_la_llamada">No se pudo ejecutar la llamada a la api, esta el servidor online?</string>
    <string name="poner_pokemon_en_favoritos">Poner el pokemon en favoritos</string>
    <string name="pokemon_en_favoritos_correctamente">El pokemon se ha colocado en favoritos correctamente</string>
    <string name="quitado_pokemon_en_favoritos_correctamente">Quitado pokemon de favoritos correctamente</string>
    <string name="enviar_peticion_de_amistad">Enviar petición</string>
    <string name="hay_solicitudes_de_amistad_pentientes">Tienes solicitudes de amistad pendientes</string>
    <string name="la_solicitud_se_envio_correctamente">Solicitud de amistad enviada</string>
    <string name="el_usuario_ya_es_amigo">Ya eres amigo de ese usuario</string>
    <string name="el_usuario_ya_tiene_la_peticion_de_amistad">Ya hay una peticion de amistad</string>
    <string name="no_tienes_solicitudes">No tienes solicitudes pendientes</string>
    <string name="borrar_amigo">Borrar amigo</string>
    <string name="volver_atras">Volver atras</string>
    <string name="solo_puedes_ver_la_informacion_de_tus_amigos">Solo puedes ver la información de tus amigos</string>
    <string name="estas_seguro_de_ello">Se va a borrar el amigo, pulsa de nuevo para confirmar.</string>
    <string name="pass_minimo_caracteres">La contraseña ha de tener al menos 8 caracteres</string>
</resources>