<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragment.BuscadorEquiposFragment"
    >
    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/mis_equipos_border"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_margin="5dp"
            >

            <TextView
                android:id="@+id/nombre_equipo"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/nombre"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textColor="@color/text"/>

            <TextView
                android:id="@+id/autor_equipo"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/autor"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textColor="@color/text"
                />

            <TextView
                android:id="@+id/codigo_equipo"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/id"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textColor="@color/text"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                >
                <TextView
                    android:id="@+id/likes_equipo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:height="30dp"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/text"
                    />
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/equipo_like_button"
                    android:src="@drawable/like_unpressed"
                    app:tint="@color/text"
                    android:background="@color/background"
                    android:layout_marginRight="20dp"
                    />

                <TextView
                    android:id="@+id/favoritos_equipo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:height="30dp"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/text"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/equipo_favorito_button"
                    android:src="@drawable/star_pressed"
                    app:tint="@color/yellow"
                    android:background="@color/background"
                    />

            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_margin="10dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/pokeball"
                    android:id="@+id/imagenPokemon1"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/pokeball"
                    android:id="@+id/imagenPokemon2"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/pokeball"
                    android:id="@+id/imagenPokemon3"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/pokeball"
                    android:id="@+id/imagenPokemon4"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/pokeball"
                    android:id="@+id/imagenPokemon5"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/pokeball"
                    android:id="@+id/imagenPokemon6"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        >
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/like"
            android:layout_marginEnd="20dp"
            android:id="@+id/like_button"
            />
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/favoritos"
            android:layout_marginStart="20dp"
            android:id="@+id/favoritos_button"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        >
        <TextView
            android:layout_marginStart="40dp"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:text="@string/id"
            android:gravity="end|center_vertical"
            android:textStyle="bold"
            android:textColor="@color/text"
            />
        <EditText
            android:id="@+id/id_equipo_input"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text=""
            android:hint="@string/idHint"
            android:gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/text"
            />
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/lupa"
            android:background="@color/background"
            app:tint="@color/text"
            android:id="@+id/buscar_equipo"
            android:layout_marginEnd="40dp"
            />
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:layout_marginTop="30dp"
        android:text="@string/salir"
        android:id="@+id/salir_button"
        />
</LinearLayout>