<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.debilidadesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >

            <TextView
                android:id="@+id/textResistencias2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resistances"
                android:gravity="center_horizontal"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerResistencias"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:clickable="false"
                android:gravity="center_horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/textInmunidades2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inmunities"
                android:gravity="center_horizontal"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerInmunidades"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:clickable="false"
                android:gravity="center_horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/textDebilidades2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weakness"
                android:gravity="center_horizontal"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerDebilidades"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:clickable="false"
                android:gravity="center_horizontal"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>